--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,15 @@
+# render.yaml (No database)
+
 services:
   - type: web
     name: ai-resume-coach
     env: python
-    plan: free 
-    buildCommand: "pip install -r requirements.txt && python -c 'from auth.db import init_db; init_db()'"
+    plan: free
+    buildCommand: "pip install -r requirements.txt"
     startCommand: "streamlit run app.py --server.port $PORT --server.address 0.0.0.0"
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.4
+      - key: GOOGLE_API_KEY
+        # You will set the value for this in the Render dashboard
+        value: ""
